--- a/index.html
+++ b/index.html
@@ -19,11 +19,23 @@
   <!-- MailerLite Universal -->
   <script>
     (function (m, a, i, l, e, r) {
-      m['MailerLiteObject'] = e; function f() {
-        var c = { a: arguments, q: [] }; var r = this.push(c); return "number" != typeof r ? r : f.bind(c.q);
+      m['MailerLiteObject'] = e;
+
+      function f() {
+        var c = {
+          a: arguments,
+          q: []
+        };
+        var r = this.push(c);
+        return "number" != typeof r ? r : f.bind(c.q);
       }
-      f.q = f.q || []; m[e] = m[e] || f.bind(f.q); m[e].q = m[e].q || f.q; r = a.createElement(i);
-      var _ = a.getElementsByTagName(i)[0]; r.async = 1; r.src = l + '?v' + (~~(new Date().getTime() / 1000000));
+      f.q = f.q || [];
+      m[e] = m[e] || f.bind(f.q);
+      m[e].q = m[e].q || f.q;
+      r = a.createElement(i);
+      var _ = a.getElementsByTagName(i)[0];
+      r.async = 1;
+      r.src = l + '?v' + (~~(new Date().getTime() / 1000000));
       _.parentNode.insertBefore(r, _);
     })(window, document, 'script', 'https://static.mailerlite.com/js/universal.js', 'ml');
 
@@ -35,7 +47,10 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142588448-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
 
     gtag('config', 'UA-142588448-1');
